# Halide

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: deploy.rs  mod.rs  monitor.rs  test.rs
