[package]
name = "halide"
version = "0.1.1"
edition = "2021"
description = "Flexible suite of solana developer tooling for devs that have something to do with their time"
authors = ["github.com/Ozodimgba"]
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
solana-sdk = "1.17"

[[bin]]
name = "halide"
path = "src/main.rs"